--- a/index.html
+++ b/index.html
@@ -5,39 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyWeb</title>
-    <style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <style>
         body{
             margin: 0;
             background-color: #424242;
             font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-        .navbar{
-            background-color: #212121;
-            width: 100%;
-            display: flex;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 64;
-            padding-inline: 2rem;
-            color: rgb(255, 255, 255);
-            border-bottom: 1px solid #62ffa6;
-        }
-        .nav-list ,a{
-            margin-left: auto;
-            margin-right: 2em;
-            margin-block: auto;
-            text-decoration: none;
-            font-size: 20px;
-            color: rgba(255, 255, 255,0.55);
-            vertical-align: middle;
-        }
-        .nav-list a{
-            margin-inline:8px ;
-        }
-        .nav-list a:hover{
-            color: #ffffff;
-            transition: all 0.1s;
         }
         .container{
             color: #62ffa6;
@@ -84,5 +57,7 @@
             </p>
         </div>
     </div>
+                            
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"  crossorigin="anonymous"></script>
 </body>
 </html>
