--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyWeb</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-     <style>
+    <style>
         body{
             margin: 0;
             background-color: #424242;
@@ -34,17 +34,26 @@
 </head>
 <body>
     <!-- Navbar links -->
-    <div class="navbar">
-        <div class="nav-header">
-            <h1 style="font-size:1.6rem ;margin-block: 0.5rem;">MyWeb</h1>
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-success">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-link active" href="index.html" aria-current="page">Home</a>
+                    <a class="nav-link" href="Crud.html">Curd App</a>
+                    <a class="nav-link" href="Resume.html">Rusume</a>
+                    <a class="nav-link" href="payment-form.html">Form</a>
+                    <a class="nav-link" href="Game.html">Game</a>
+                </div>
+            </div>
         </div>
-        <div class="nav-list">
-            <a href="index.html">Home</a>
-            <a href="Crud.html">Curd App</a>
-            <a href="Resume.html">Rusume</a>
-            <a href="payment-form.html">Form</a>
-        </div>        
-    </div>
+    </nav>
+
 
     <!-- Display page content -->
     <div class="container">
@@ -57,7 +66,8 @@
             </p>
         </div>
     </div>
-                            
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"  crossorigin="anonymous"></script>
 </body>
 </html>
