--- a/index.html
+++ b/index.html
@@ -6,44 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyWeb</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        body{
-            margin: 0;
-            background-color: #424242;
-            font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-        .container{
-            color: #62ffa6;
-            height: 600px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .message{
-            border: 1px solid #62ffa6;
-            padding-inline:16px;
-            border-radius: 8px;
-            width: 50rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="Resources/CSS/Style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="FaviconB/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="FaviconB/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="FaviconB/favicon-16x16.png">
+    <link rel="manifest" href="FaviconB/site.webmanifest">
 </head>
 <body>
     <!-- Navbar links -->
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-success">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">MyWeb</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
+                <div class="navbar-nav ms-sm-auto text-center">
                     <a class="nav-link active" href="index.html" aria-current="page">Home</a>
                     <a class="nav-link" href="Crud.html">Curd App</a>
                     <a class="nav-link" href="Resume.html">Rusume</a>
@@ -60,9 +40,7 @@
         <div class="message">
             <h1>This is a Sample Page</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit
-                . At maxime consectetur laborum vitae labore necessitatibus, vero a
-                lias accusantium! Eligendi, repudiandae.
+                This page is created for sample display over a full view piont page
             </p>
         </div>
     </div>
