--- a/Game.html
+++ b/Game.html
@@ -38,11 +38,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-sm-auto text-center">
-                    <a class="nav-link active" href="index.html" aria-current="page">Home</a>
+                    <a class="nav-link" href="index.html" aria-current="page">Home</a>
                     <a class="nav-link" href="Crud.html">Curd App</a>
                     <a class="nav-link" href="Resume.html">Rusume</a>
                     <a class="nav-link" href="payment-form.html">Form</a>
-                    <a class="nav-link" href="Game.html">Game</a>
+                    <a class="nav-link active" href="Game.html">Game</a>
                 </div>
             </div>
         </div>
