--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyWeb</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="Resources/CSS/Style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="FaviconB/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="FaviconB/favicon-32x32.png">
@@ -17,7 +19,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-success">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">MyWeb</a>
+            <a class="navbar-brand fs-4" href="#">MyWeb</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,21 +33,84 @@
                     <a class="nav-link" href="Game.html">Game</a>
                 </div>
             </div>
-        </div>
+        </div>      
     </nav>
 
-
-    <!-- Display page content -->
-    <div class="container">
-        <div class="message">
-            <h1>This is a Sample Page</h1>
-            <p>
-                This page is created for sample display over a full view piont page
-            </p>
-        </div>
+    <div class="container-fluid bg-success p-2 text-dark text-center bg-opacity-50">
+        <h2>Programing Languages and Related Content</h2>
     </div>
 
+    <section class="bg-opacity-50">
+        <div class="conatiner d-flex px-3 py-3">
+            <div class="me-3 p-3 bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <h3 class="fw-semibold">HTML</h3>
+                <p class="fs-5">
+                    HTML, in full hypertext markup language, a formatting system for displaying material retrieved over the Internet. Each
+                    retrieval unit is known as a Web page (from World Wide Web), and such pages frequently contain hypertext links that
+                    allow related pages to be retrieved. HTML is the markup language for encoding Web pages. It was designed by the British
+                    scientist Sir Tim Berners-Lee at the CERN nuclear physics laboratory in Switzerland during the 1980s. HTML markup tags
+                    specify document elements such as headings, paragraphs, and tables. They mark up a document for display by a computer
+                    program known as a Web browser. The browser interprets the tags, displaying the headings, paragraphs, and tables in a
+                    layout that is adapted to the screen size and fonts available to it.
+                </p>
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                Resources
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"  crossorigin="anonymous"></script>
+            <div class="bg-warning bg-opacity-50" style="height: auto;width: auto;">
+                <img src="Resources/images/index.png" class="rounded" alt="...">
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-opacity-50">
+        <div class="conatiner d-flex px-3 py-3">
+            <div class="me-3 p-3 bg-info bg-opacity-10 border border-info border-start-0 rounded-end">
+                <h3 class="fw-semibold">CSS</h3>
+                <p class="fs-5">
+                    CSS stands for Cascading Style Sheets. It is a style sheet language which is used to describe the look and formatting of
+                    a document written in markup language. It provides an additional feature to HTML. It is generally used with HTML to
+                    change the style of web pages and user interfaces. It can also be used with any kind of XML documents including plain
+                    XML, SVG and XUL.
+                    
+                    CSS is used along with HTML and JavaScript in most websites to create user interfaces for web applications and user
+                    interfaces for many mobile applications.
+                </p>
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                Resources
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="bg-warning bg-opacity-50">
+                <img src="Resources/images/images.png" class="rounded  image-thumbnail" alt="...">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
