--- a/Resume.html
+++ b/Resume.html
@@ -38,7 +38,7 @@
 
   <div class="complex">
     <div class="image">
-      <img src="Resources/images/img.png" alt="This is a image" />
+      <img src="Resources/images/img.jpg" alt="This is a image" />
     </div>
       <div class="rside">
 
