Added new sections in html and new images

--- a/Game.html
+++ b/Game.html
@@ -13,7 +13,7 @@
     <style>
         body{
             height: 100vh;
-            background: rgba(216, 216, 216, 0.664) !important;
+            background: #e0faff !important;
         }
 
         .btn-container-x{
