--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="manifest" href="FaviconB/site.webmanifest">
 </head>
 <body>
-    <!-- Navbar links -->
 
+    <!-- Navbar links -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-success">
         <div class="container-fluid">
             <a class="navbar-brand fs-4" href="#">MyWeb</a>
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-sm-auto text-center">
+                <div class="navbar-nav ms-sm-auto text-center fs-5">
                     <a class="nav-link active" href="index.html" aria-current="page">Home</a>
                     <a class="nav-link" href="Crud.html">Curd App</a>
                     <a class="nav-link" href="Resume.html">Rusume</a>
@@ -39,6 +39,9 @@
     <div class="container-fluid bg-success p-2 text-dark text-center bg-opacity-50">
         <h2>Programing Languages and Related Content</h2>
     </div>
+
+
+
 
     <!-- Main Section for content -->
     <!-- Html part -->
@@ -55,6 +58,8 @@
                     program known as a Web browser. The browser interprets the tags, displaying the headings, paragraphs, and tables in a
                     layout that is adapted to the screen size and fonts available to it.
                 </p>
+
+                <a type="button" class="btn btn-info mb-3" href="https://developer.mozilla.org/en-US/docs/Web/HTML">Learn More</a>                
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
@@ -92,6 +97,7 @@
                     CSS is used along with HTML and JavaScript in most websites to create user interfaces for web applications and user
                     interfaces for many mobile applications.
                 </p>
+                <a type="button" class="btn btn-success mb-3" href="https://developer.mozilla.org/en-US/docs/Web/CSS">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
@@ -127,6 +133,7 @@
                     renders web pages in an interactive and dynamic fashion. This allowing the pages to react to events, exhibit special
                     effects, accept variable text, validate data, create cookies, detect a user’s browser, etc
                 </p>
+                <a type="button" class="btn btn-info mb-3" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
@@ -164,6 +171,7 @@
                     currently used on a large array of domains like web development, desktop applications, data science, DevOps, and
                     automation/productivity.
                 </p>
+                <a type="button" class="btn btn-success mb-3" href="https://www.python.org/doc/essays/blurb/">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
@@ -200,6 +208,7 @@
                     It is said that ‘C’ is a god’s programming language. One can say, C is a base for the programming. If you know "C", you
                     can easily grasp the knowledge of the other programming languages that uses the concept of "C"
                 </p>
+                <a type="button" class="btn btn-info mb-3" href="https://www.learn-c.org/">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
@@ -240,6 +249,7 @@
                     provide C++ compilers, including the Free Software Foundation, LLVM, Microsoft, Intel, Embarcadero, Oracle, and IBM, so
                     it is available on many platforms.
                 </p>
+                <a type="button" class="btn btn-success mb-3" href="https://www.javatpoint.com/cpp-tutorial">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
@@ -277,6 +287,7 @@
                     The difference between the way Java and other programming languages worked was revolutionary. Code in other languages is
                     first translated by a compiler into instructions for a specific type of computer.
                 </p>
+                <a type="button" class="btn btn-info mb-3" href="https://dev.java/learn/getting-started-with-java/">Learn More</a>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
