--- a/Crud.html
+++ b/Crud.html
@@ -57,6 +57,12 @@
     </main>
 
 
+    <!-- Footer part -->
+    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50 position-fixed w-100 bottom-0">
+      <div class="container text-center">
+        <small>Copyright &copy; MyWeb</small>
+      </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
