--- a/Game.html
+++ b/Game.html
@@ -60,6 +60,16 @@
         <p class="text-sm-start fs-2 text-success fw-bolder">Result - <span id="result"></span></p>
     </div>
       
+
+
+    <!-- Footer part -->
+    <footer id="sticky-footer" class="w-100 flex-shrink-0 py-4 bg-dark text-white-50 bottom-0 position-fixed">
+        <div class="container text-center">
+            <small>Copyright &copy; MyWeb</small>
+        </div>
+    </footer>
+
+    
   <script src="Resources/Javascript/app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
