--- a/Resume.html
+++ b/Resume.html
@@ -45,9 +45,9 @@
         <h3>About</h3>
         <p class="text-white">Hi ,<br>
           My Name is Awanish Yadav and currently I am persuing my B.Tech degree from Lucknow University <br/>
-          I am intrested in computers and coding so I had Computer Science and Engennering<br />
+          I am intrested in computers and coding so that I am graduating in Computer Science and Engennering<br />
           I had compleated some of the web development
-          projects and trying to lern more and more .
+          projects and trying to learn more and more .
         </p>
 
         <h4>My Strengths</h4>  
@@ -81,6 +81,12 @@
     </div>
 
 
+    <!-- Footer part -->
+    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+      <div class="container text-center">
+        <small>Copyright &copy; MyWeb</small>
+      </div>
+    </footer>
 
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
