--- a/index.html
+++ b/index.html
@@ -311,5 +311,14 @@
             </div>
         </div>
     </section>
+
+
+
+    <!-- Footer part -->
+    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+        <div class="container text-center">
+            <small>Copyright &copy; MyWeb</small>
+        </div>
+    </footer>
 </body>
 </html>
