--- a/payment-form.html
+++ b/payment-form.html
@@ -44,8 +44,8 @@
       <label for="name">Name* :</label>
       <input type="text" name="name" id="name" placeholder="eg;Rakesh Kumar" required>
        
-      <label for="gender">Gender* :</label>
-        <select name="gender" id="select">
+      <label for="gender" class="mb-2">Gender* :</label>
+        <select name="gender" id="select" class="mb-2">
           <option disabled selected>--Select any one--</option>
           <option value="male">Male</option>
           <option value="female">Female</option>
@@ -64,8 +64,8 @@
 
       <h2>Payment Information</h2>
 
-      <label for="card_type">Card type* :</label>
-          <select name="card_type" id="card_type" required >
+      <label for="card_type" class="mb-2">Card type* :</label>
+          <select name="card_type" id="card_type" required class="mb-2">
               <option value=""> --Select card Type--</option>
               <option value="visa">visa</option>
               <option value="rupay">Rupay</option>
@@ -82,6 +82,15 @@
       
       <button type="button" class="btn btn-success btn-md w-100 fs-5 my-3">Pay Now</button>
     </form>
+
+
+    <!-- Footer part -->
+    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+      <div class="container text-center">
+        <small>Copyright &copy; MyWeb</small>
+      </div>
+    </footer>
+
 
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
