--- a/index.html
+++ b/index.html
@@ -58,23 +58,30 @@
                     program known as a Web browser. The browser interprets the tags, displaying the headings, paragraphs, and tables in a
                     layout that is adapted to the screen size and fonts available to it.
                 </p>
+                <a type="button" class="btn btn-info mb-3" target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/HTML">Learn More</a>  
 
-                <a type="button" class="btn btn-info mb-3" href="https://developer.mozilla.org/en-US/docs/Web/HTML">Learn More</a>                
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+
+                <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"  aria-expanded="true" aria-controls="collapseOne">
                                 Resources
                             </button>
                         </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                            data-bs-parent="#accordionFlushExample">
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <code><a href="http://drive.google.com" class="text-decoration-none">Learn HTML PDF</a></code>
+                                <strong>Youtube Videos</strong> 
+                                 <code>&nbsp; &nbsp; &nbsp;<a href="http://www.youtube.com">Link</a></code>
+                            </div>
+                            <div class="accordion-body">
+                                <strong>PDFs</strong>
+                                <code>&nbsp; &nbsp; &nbsp;<a href="http://www.drive.com">Link</a></code>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
             <!-- Html Image -->
             <div class="img-container bg-danger bg-opacity-25 d-flex justify-content-center rounded">
@@ -82,6 +89,9 @@
             </div>
         </div>
     </section>
+
+
+
 
     <!-- Css Part -->
     <section class="bg-opacity-50">
@@ -98,7 +108,7 @@
                     interfaces for many mobile applications.
                 </p>
                 <a type="button" class="btn btn-success mb-3" href="https://developer.mozilla.org/en-US/docs/Web/CSS">Learn More</a>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion accordion-flush" id="accordionFlushExample2">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -122,6 +132,9 @@
         </div>
     </section>
 
+
+
+
     <!-- Javascript Part -->
     <section class="bg-opacity-50">
         <div class="conatiner d-md-flex px-3 py-3">
@@ -134,7 +147,7 @@
                     effects, accept variable text, validate data, create cookies, detect a user’s browser, etc
                 </p>
                 <a type="button" class="btn btn-info mb-3" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Learn More</a>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion accordion-flush" id="accordionFlushExample3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -158,6 +171,8 @@
         </div>
     </section>
 
+
+
     <!-- Python Part -->
     <section class="bg-opacity-50">
         <div class="conatiner d-md-flex px-3 py-3">
@@ -172,7 +187,7 @@
                     automation/productivity.
                 </p>
                 <a type="button" class="btn btn-success mb-3" href="https://www.python.org/doc/essays/blurb/">Learn More</a>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion accordion-flush" id="accordionFlushExample4">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -196,6 +211,10 @@
         </div>
     </section>
 
+
+
+
+
     <!-- C part -->
     <section class="bg-opacity-50">
         <div class="conatiner d-md-flex px-3 py-3">
@@ -209,7 +228,7 @@
                     can easily grasp the knowledge of the other programming languages that uses the concept of "C"
                 </p>
                 <a type="button" class="btn btn-info mb-3" href="https://www.learn-c.org/">Learn More</a>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion accordion-flush" id="accordionFlushExample5">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -233,6 +252,9 @@
         </div>
     </section>
 
+
+
+
     <!-- C++ part -->
     <section class="bg-opacity-50">
         <div class="conatiner d-md-flex px-3 py-3">
@@ -250,7 +272,7 @@
                     it is available on many platforms.
                 </p>
                 <a type="button" class="btn btn-success mb-3" href="https://www.javatpoint.com/cpp-tutorial">Learn More</a>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion accordion-flush" id="accordionFlushExample6">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -274,6 +296,10 @@
         </div>
     </section>
 
+
+
+
+
     <!-- Java part -->
     <section class="bg-opacity-50">
         <div class="conatiner d-md-flex px-3 py-3">
@@ -288,7 +314,7 @@
                     first translated by a compiler into instructions for a specific type of computer.
                 </p>
                 <a type="button" class="btn btn-info mb-3" href="https://dev.java/learn/getting-started-with-java/">Learn More</a>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion accordion-flush" id="accordionFlushExample7">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -315,7 +341,7 @@
 
 
     <!-- Footer part -->
-    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+    <footer id="sticky-footer" class="flex-shrink-0 py-3 bg-dark text-white-50">
         <div class="container text-center">
             <small>Copyright &copy; MyWeb</small>
         </div>
