--- a/Crud.html
+++ b/Crud.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Crud-operation</title>
     <link rel="apple-touch-icon" sizes="180x180" href="FaviconB/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="FaviconB/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="FaviconB/favicon-16x16.png">
     <link rel="manifest" href="FaviconB/site.webmanifest">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <style>
       body{
         background: #424242;
@@ -21,13 +24,13 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-success">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">MyWeb</a>
+      <a class="navbar-brand fs-4" href="#">MyWeb</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-sm-auto text-center">
+        <div class="navbar-nav ms-sm-auto text-end me-2 fs-5">
           <a class="nav-link" href="index.html" >Home</a>
           <a class="nav-link active" href="Crud.html" aria-current="page">Curd App</a>
           <a class="nav-link" href="Resume.html">Rusume</a>
@@ -65,7 +68,6 @@
     </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
     <script>
       let addBtn = document.getElementById('add_btn');
       addBtn.addEventListener('click',addstudent);
