--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-sm-auto text-center fs-5">
+                <div class="navbar-nav ms-sm-auto text-end me-2 fs-5">
                     <a class="nav-link active" href="index.html" aria-current="page">Home</a>
                     <a class="nav-link" href="Crud.html">Curd App</a>
                     <a class="nav-link" href="Resume.html">Rusume</a>
